--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helperjs",
+  "name": "@itsdipankaj/helperjs",
   "version": "1.0.0",
   "description": "The helperJS library provides several utility functions that can simplify and streamline the process of developing web applications.",
   "main": "index.js",
